<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.xenei.robot</groupId>
	<artifactId>DAT</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<properties>
		<maven.compiler.release>17</maven.compiler.release>
		<dl4j-master.version>1.0.0-M2.1</dl4j-master.version>
		<junit.version>5.10.0</junit.version>
		<junit.platform.version>1.8.1</junit.platform.version>
		<logback.version>1.2.3</logback.version>
		<jena.version>5.1.0</jena.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<ver.mockito>5.6.0</ver.mockito>
		<diozero.ver>1.4.1</diozero.ver>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M7</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<modules>

		<module>rpi</module>
		<module>common</module>

	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-api</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-params</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit.platform</groupId>
				<artifactId>junit-platform-runner</artifactId>
				<version>${junit.platform.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>jena-core</artifactId>
				<version>${jena.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>jena-querybuilder</artifactId>
				<version>${jena.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>jena-geosparql</artifactId>
				<version>${jena.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-math3</artifactId>
				<version>3.6.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.13.0</version>
			</dependency>
			<dependency>
				<groupId>org.locationtech.jts</groupId>
				<artifactId>jts-core</artifactId>
				<version>1.19.0</version>
			</dependency>
			<dependency>
				<groupId>mil.nga.sf</groupId>
				<artifactId>sf-wkt</artifactId>
				<version>1.2.2</version>
			</dependency>
			<dependency>
				<groupId>com.diozero</groupId>
				<artifactId>diozero-core</artifactId>
				<version>${diozero.ver}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${ver.mockito}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.xenei.robot</groupId>
				<artifactId>robut-common</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.xenei.robot</groupId>
				<artifactId>robut-common</artifactId>
				<version>0.0.1-SNAPSHOT</version>
				<type>test-jar</type>
				<classifier>tests</classifier>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.jena</groupId>
				<artifactId>jena-arq</artifactId>
				<version>${jena.version}</version>
			</dependency>
			<dependency>
				<groupId>uk.pigpioj</groupId>
				<artifactId>pigpioj-java</artifactId>
				<version>2.6.1</version>
			</dependency>
			<dependency>
			  <groupId>org.slf4j</groupId>
			  <artifactId>slf4j-simple</artifactId>
			  <version>2.0.10</version>
			</dependency>
			<!-- https://mvnrepository.com/artifact/org.awaitility/awaitility -->
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>4.3.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>commons-cli</groupId>
				<artifactId>commons-cli</artifactId>
				<version>1.9.0</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<repositories>
		<repository>
			<id>apache.snapshots</id>
			<name>Apache Development Snapshot Repository</name>
			<url>https://repository.apache.org/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>
